--- a/src/Lumina.Cmd/Lumina.Cmd.csproj
+++ b/src/Lumina.Cmd/Lumina.Cmd.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="CliFx" Version="1.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Pastel" Version="1.3.1" />
     </ItemGroup>
 
